# ok-redirects

./: .gitignore  README.rst  setup.cfg  setup.py
.github/workflows/: pythonpublish.yml
ok_redirects/: __init__.py  admin.py  apps.py  conf.py  constants.py  fields.py  middleware.py  models.py  recievers.py  responses.py  services.py  utils.py
ok_redirects/migrations/: 0001_initial.py  0002_redirect_is_active.py  0003_auto_20200908_1334.py  0004_auto_20201218_1122.py  0005_auto_20210112_0814.py  0006_auto_20220414_1213.py
redirects/: __init__.py  conf.py  middleware.py  models.py
redirects/migrations/: 0001_initial.py  0002_redirect_is_active.py
