[metadata]
description = Simple Redirects App, which is particularly useful in the cases where you want to update some existing URLs without compromising your Website SEO.
long_description = file: README.rst
author = Oleg Kleschunov
author_email = igorkleschunov@gmail.com
url = https://github.com/LowerDeez/ok-redirects
home-page = https://github.com/LowerDeez/ok-redirects
keywords = python, redirects, redirects-models, django
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.2
    Framework :: Django :: 3.1

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    django>=1.11
    six
    mock

[isort]
known_first_party = redirects
default_section = THIRDPARTY
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
multi_line_output = 0
skip = migrations

[coverage:run]
source = redirects
branch = True
omit =
    redirects/migrations/*
[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__

[coverage:html]
directory = /tmp/coverage_report/redirects
